# blya_bot

./: .gitignore  Dockerfile  Dockerfile-vosk  Dockerfile-whisper  LICENSE  LICENSE.md  README.md  main.py  pyproject.toml
.do/: app.yaml  deploy.template.yaml
blya_bot/: __init__.py  audio.py  core.py  dictionary.py  health.py  logging_conf.py  main.py  main_v2.py  recognition.py  settings.py  telegram.py  utils.py  web_utils.py  word_count.py
blya_bot/core/: __init__.py  bot_core.py
blya_bot/dictionary/: __init__.py  dsl_dict.py  dsl_dictionary.py  dsl_morph_dictionary.py  entry.py  interface.py  morph_modifier.py  sparse_list.py
blya_bot/models/: __init__.py  models.py
blya_bot/recognition/: __init__.py  fast_whisper.py  faster_whisper.py  interface.py  pywhispercpp.py  vosk.py  whisper.py
blya_bot/transcription_cache/: __init__.py  interface.py  memory_cache.py  sqlite_cache.py
blya_bot/word_count/: __init__.py  achocorasik_counter.py  interface.py  kwtree_counter.py  utils.py
dockerfiles/: faster-whisper.Dockerfile  pywhispercpp.Dockerfile  vosk.Dockerfile
fixtures/: bad_words.txt
images/: Dockerfile-vosk-big-ru  Dockerfile-whisper-small-ru  Dockerfile-whisper-tiny-ru
tests/: test_blya_bot.py
utils/: pull_faster_whisper_model.py  pull_whispercpp_model.py
