[tool.poetry]
name = "blya_bot"
version = "0.1.0"
description = ""
authors = ["Alexey Zakharov <dokzlo13@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
emoji = "^2.0.0"
aiohttp = "^3.8.1"
ahocorapy = "^1.6.1"
environs = "^9.5.0"
structlog = "^22.3.0"
aiogram = "^2.23.1"
whisper = {git = "https://github.com/openai/whisper.git", optional = true}
vosk = {version = "^0.3.43", optional = true}
pydub = {version = "^0.25.1", optional = true}
pymorphy2 = {version = "^0.9.1", optional = true }
pymorphy2-dicts-ru = {version = "^2.4.417127.4579844", optional = true }
aiosqlite = "^0.18.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.7.1"
flake8-black = "^0.3.3"
bandit = "^1.7.4"
black = "^22.6.0"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
ipython = "^8.4.0"
memory-profiler = "^0.60.0"
Pympler = "^1.0.1"

[tool.poetry.extras]
whisper = ["whisper"]
vosk = ["vosk", "pydub"]
pymorphy = ["pymorphy2", "pymorphy2-dicts-ru"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
